--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,23 @@
 #one {
-	background-color: #2884c5;
+	background-color: white;
 	text-align: center;
 	overflow: hidden;
+	padding-bottom: 50px;
 }
 
 .row .col-md-12 h1 {
 	font-family: "Geogrotesque";
 	padding-top: 100px;
-	color: white;
+	color: #2884c5;
 	font-style: italic;
+	font-size: 72px;
 }
 
 .row .btn {
 	color: black;
 	margin-top: 30px;
-	margin-bottom: 30px;
 	font-family: "Geogrotesque";
-	font-size: 20px;
+	font-size: 30px;
 	font-style: italic;
 	background: rgba(42,247,114,1);
 	background: -moz-linear-gradient(top, rgba(42,247,114,1) 0%, rgba(42,247,114,1) 1%, rgba(217,255,214,1) 100%);
@@ -28,20 +29,31 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2af772', endColorstr='#d9ffd6', GradientType=0 );
 	border-color: transparent;
 	border-radius: 30px;
-	width: 200px;
+	width: 270px;
 }
 
-#one .col-sm-6 p {
-	color: white;
+.frontleft {
+	color: black;
 	font-family: "Geogrotesque";
-	clear: both;
 	padding-left: 50px;
 	padding-right: 30px;
-	font-size: 18px;
-	padding-bottom: 30px;
-	margin-top: 20px;
+	font-size: 27px;
+	margin-top: 30px;
 	font-style: italic;
-	line-height: 95%;
+	line-height: 150%;
+	color: #2884c5;
+}
+
+.frontright {
+	color: black;
+	font-family: "Geogrotesque";
+	padding-left: 50px;
+	padding-right: 30px;
+	font-size: 27px;
+	margin-top: 30px;
+	font-style: italic;
+	line-height: 150%;
+	color: #2884c5;
 }
 
 .row .frontrighttext {
@@ -58,32 +70,25 @@
 	line-height: 95%;
 }
 
-.row .birds li {
-	display: inline;
-	list-style-type: none;
-	padding-right: 7%;
-}
-
-#egg {
-	width: 14;
-}
-
-.row .birds li:nth-child(2) img {
-	width: 7%;
-}
-
-.row .birds li:nth-child(3) img {
-	width: 13%;
-}
-
-.row .birds li:nth-child(4) img {
-	width: 16%;
-}
 
 #two {
 	background-color: #1e6394;
 	text-align: center;
 	overflow: hidden;
+	padding-top: 50px;
+}
+
+#two img:nth-child(1) {
+	opacity: 0.7;
+}
+
+#two img:nth-child(2) {
+	opacity: 0.7;
+}
+
+#two img:nth-child(3) {
+	padding-bottom: 30px;
+	opacity: 0.7;
 }
 
 #two .features li {
@@ -97,40 +102,16 @@
 	padding-bottom: 70px;
 }
 
-.box2 .features li:nth-child(1) img {
-	width: 19%;
-	padding-top: 4%;
-}
-
-.box2 .features li:nth-child(2) img {
-	width: 28%;
-	padding-top: 2%;
-}
-
-.box2 .features li:nth-child(3) img {
-	width: 20%;
-	padding-top: 1%;
-}
-
 #three {
 	background-color: #2884c5;
-	text-align: center;
 	overflow: hidden;
 }
 
-#three h2 {
-	width: 50%;
-	color: white;
-	font-family: "Geogrotesque";
-	font-style: italic;
-	font-size: 24px;
-	line-height: 95%;
-	padding-left: 3%;
-	padding-right: 3%;
-    padding-top: 10%;
+#three img:nth-child(1) {
+
 }
 
-#three img {
+#three img:nth-child(2) {
 	padding: 10px;
 }
 
@@ -146,7 +127,7 @@
 	font-style: italic;
 	font-size: 40px;
 	color: white;
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 }
 
 #four .btn {
@@ -154,7 +135,7 @@
 	font-size: 20px;
 	font-style: italic;
 	color: black;
-	margin-bottom: 90px;
+	margin-bottom: 120px;
 	background: rgba(42,247,114,1);
 	background: -moz-linear-gradient(top, rgba(42,247,114,1) 0%, rgba(42,247,114,1) 1%, rgba(217,255,214,1) 100%);
 	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(42,247,114,1)), color-stop(1%, rgba(42,247,114,1)), color-stop(100%, rgba(217,255,214,1)));
@@ -165,7 +146,46 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2af772', endColorstr='#d9ffd6', GradientType=0 );
 	border-color: transparent;
 	border-radius: 30px;
-	width: 200px;
+	width: 270px;
+}
+
+#hatching img {
+	padding-top: 20px;
+}
+
+#egg img {
+	padding-top: 30px;
+}
+
+#birdhatch img {
+	padding-top: 15px;
+}
+
+#birdflying img {
+	padding-bottom: 20px;
+	max-width: 10%;
+}
+
+#twoa {
+	background-color: white;
+}
+
+#twob {
+	background-color: white;
+}
+
+#twob img:nth-child(3) {
+	background-color: white;
+	padding-bottom: 30px;
+}
+
+#twoa p {
+	color: white;
+	font-size: 70px;
+	padding-top: 70px;
+	font-family: "Geogrotesque";
+	text-decoration: underline;
+	color: #2884c5;
 }
 
 
